WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130641
FloatRect.h on iOS should not suck in a system header
https://bugs.webkit.org/show_bug.cgi?id=130641
Summary
FloatRect.h on iOS should not suck in a system header
Simon Fraser (smfr)
Reported
2014-03-22 12:21:50 PDT
FloatRect.h on iOS should not suck in a system header
Attachments
Patch
(1.19 KB, patch)
2014-03-22 12:22 PDT
,
Simon Fraser (smfr)
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-03-22 12:22:27 PDT
Created
attachment 227561
[details]
Patch
Geoffrey Garen
Comment 2
2014-03-22 12:25:58 PDT
Comment on
attachment 227561
[details]
Patch r=me if it builds
Simon Fraser (smfr)
Comment 3
2014-03-22 12:42:58 PDT
https://trac.webkit.org/r166123
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug