FloatRect.h on iOS should not suck in a system header https://bugs.webkit.org/show_bug.cgi?id=130641

Reviewed by Geoff Garen.

Don't pull in <CoreGraphics/CGGeometry.h> from FloatRect.h.

* platform/graphics/FloatRect.h:

Canonical link: https://commits.webkit.org/148659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166123 268f45cc-cd09-0410-ab3c-d52691b4dbfc